--- a/Cloth App/ViewController/Discover/XIB/BrandXIB.xib
+++ b/Cloth App/ViewController/Discover/XIB/BrandXIB.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,18 +11,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BrandXIB" customModule="Cloth_App" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BrandXIB" customModule="Clothing_Click" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="139" height="171"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="139" height="171"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uWc-eA-fO2" customClass="AnimatableImageView" customModule="IBAnimatable">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rmy-Rw-1vZ" customClass="AnimatableView" customModule="IBAnimatable">
                         <rect key="frame" x="19.666666666666671" y="10" width="100" height="100"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uWc-eA-fO2" customClass="AnimatableImageView" customModule="IBAnimatable">
+                                <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" name="App_Light_Border_Color"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="MFy-eW-bbg"/>
-                            <constraint firstAttribute="width" constant="100" id="xDV-QW-K7Y"/>
+                            <constraint firstAttribute="trailing" secondItem="uWc-eA-fO2" secondAttribute="trailing" constant="10" id="6gx-nj-7tg"/>
+                            <constraint firstAttribute="width" constant="100" id="DaT-rV-z8P"/>
+                            <constraint firstAttribute="height" constant="100" id="fVH-fK-IBi"/>
+                            <constraint firstAttribute="bottom" secondItem="uWc-eA-fO2" secondAttribute="bottom" constant="10" id="nlF-LL-Y7J"/>
+                            <constraint firstItem="uWc-eA-fO2" firstAttribute="top" secondItem="Rmy-Rw-1vZ" secondAttribute="top" constant="10" id="uJz-p3-LQa"/>
+                            <constraint firstItem="uWc-eA-fO2" firstAttribute="leading" secondItem="Rmy-Rw-1vZ" secondAttribute="leading" constant="10" id="zp2-vF-ekO"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -35,9 +50,9 @@
                                 <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
-                    </imageView>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aar-KM-64K">
-                        <rect key="frame" x="19.666666666666671" y="116" width="100" height="51"/>
+                        <rect key="frame" x="19.666666666666671" y="167" width="100" height="0.0"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                         <color key="textColor" name="Black_Theme_Color"/>
                         <nil key="highlightedColor"/>
@@ -46,13 +61,11 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="aar-KM-64K" firstAttribute="top" secondItem="uWc-eA-fO2" secondAttribute="bottom" constant="6" id="0lR-nU-qzl"/>
-                <constraint firstItem="aar-KM-64K" firstAttribute="trailing" secondItem="uWc-eA-fO2" secondAttribute="trailing" id="6ri-uE-2sp"/>
                 <constraint firstItem="aar-KM-64K" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="CNx-ZH-Gx6"/>
-                <constraint firstItem="uWc-eA-fO2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="gj1-Cf-HNj"/>
+                <constraint firstItem="Rmy-Rw-1vZ" firstAttribute="leading" secondItem="aar-KM-64K" secondAttribute="leading" id="Zvg-34-FHU"/>
+                <constraint firstItem="Rmy-Rw-1vZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="l4b-bM-RGs"/>
+                <constraint firstItem="Rmy-Rw-1vZ" firstAttribute="trailing" secondItem="aar-KM-64K" secondAttribute="trailing" id="l9v-oa-mxs"/>
                 <constraint firstAttribute="bottom" secondItem="aar-KM-64K" secondAttribute="bottom" constant="4" id="mIj-vb-GwF"/>
-                <constraint firstItem="aar-KM-64K" firstAttribute="leading" secondItem="uWc-eA-fO2" secondAttribute="leading" id="ovN-ML-KPk"/>
-                <constraint firstItem="uWc-eA-fO2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="so5-a7-kuU"/>
             </constraints>
             <size key="customSize" width="139" height="171"/>
             <connections>
